Fixed #34 - body not wrapping in Document Library

--- a/Resources/StyleSheets/custom.css
+++ b/Resources/StyleSheets/custom.css
@@ -1,3 +1,7 @@
+.xspTextComputedField{
+	white-space: normal !important;
+}
+
 @media screen and (min-width: 1001px) {
 	.pullleft {
 		margin-left: -40% !important;
